feat: [#32] Refactoring code
- Enum for Mode and Context
- Add comments
- Simplify some code
- delete @Data annotation from jpa entities
- better configuration for cors and swagger